<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="admob_id">ca-app-pub-4943092531167782/6318527358</string>
    <string name="app_name">Gastos Simples PRO</string>
    <string name="app_font">RobotoCondensed-Bold.ttf</string>
    <string name="title_activity_menu">Gastos PRO</string>
    <string name="action_settings">Settings</string>
    <string name="action_filtro">Filtro</string>
    <string name="action_recurrent">Programado</string>
    <string name="action_confirm">Salvar</string>
    <string name="dialog_add_title">Adicionar</string>
    <string name="dialog_add_sucess">Despesa adicionada com sucesso</string>
    <string name="dialog_add_error">Erro ao adicionar despesa :(</string>
    <string name="dialog_add_no_descripition">Sem descrição</string>
    <string name="dialog_add_invalid_value">Valor invalido</string>
    <string name="dialog_add_radiobutton_gain">Ganho</string>
    <string name="dialog_add_radiobutton_expense">Despesa</string>
    <string name="dialog_add_radiobutton_recurrent_no">Normal</string>
    <string name="dialog_add_radiobutton_recurrent_daily">Diario</string>
    <string name="dialog_add_radiobutton_recurrent_monthly">Mensal</string>
    <string name="dialog_add_edittext_value">Valor</string>
    <string name="dialog_add_edittext_description">Descrição</string>
    <string name="dialog_add_text_choose_add">Programar</string>
    <string name="dialog_add_text_choose_edit">Data</string>
    <string name="dialog_add_text_ok">Ok</string>
    <string name="dialog_add_text_cancel">Cancelar</string>
    <string name="dialog_edit_sucess">Editado com sucesso</string>
    <string name="dialog_edit_error">Erro na edição</string>
    <string name="activity_details_text_category_string">Categoria</string>
    <string name="activity_details_text_category_no_category">Sem categoria</string>
    <string name="activity_details_text_value_string">Quanto?</string>
    <string name="activity_details_text_date_string">Quando?</string>
    <string name="fragment_settings_text_add_category">Adicionar categoria</string>
    <string name="fragment_settings_text_color_set">Mudar avisos</string>
    <string name="fragment_settings_text_create_category">Editar Categorias</string>
    <string name="fragment_settings_text_color_set_green">Bom $$ :)</string>
    <string name="fragment_settings_text_color_set_yellow">Atenção...</string>
    <string name="fragment_settings_text_color_set_red">Quebrado :(</string>
    <string name="fragment_settings_text_balance_type">Mostrar saldo</string>
    <string name="fragment_settings_radio_balance_type_total">Total</string>
    <string name="fragment_settings_radio_balance_type_month">Mês</string>
    <string name="fragment_settings_contextmenu_item_edit">Editar</string>
    <string name="fragment_settings_contextmenu_item_delete">Deletar</string>
    <string name="fragment_filtro_text_date">Data</string>
    <string name="fragment_filtro_text_date_month">Mês</string>
    <string name="fragment_filtro_text_date_year">Ano</string>
    <string name="fragment_about_text_more_apps">Mais aplicativos</string>
    <string name="fragment_about_tolivehealthy_text">ToLive Healthy</string>
    <string name="title_activity_settings">Configurações</string>
    <string name="title_activity_filtro">Filtro</string>
    <string name="title_activity_add">Adicionar</string>
    <string name="title_activity_details">Detalhes</string>
    <string name="title_activity_recurrent">Recorrente</string>
    <string name="fragment_list_contextmenu_item_edit">Editar</string>
    <string name="fragment_list_contextmenu_item_delete">Deletar</string>
    <string name="fragment_list_text_balance">Saldo</string>
    <string name="fragment_list_text_gain">Ganhos</string>
    <string name="fragment_list_text_expense">Despesa</string>
    <string name="fragment_add_button">$</string>
    <string name="fragment_store_text_options">Opções</string>
    <string name="fragment_store_text_email">Email</string>
    <string name="fragment_store_text_email_subject">[Gastos PRO] Relatorio de gastos</string>
    <string name="fragment_store_text_email_instructions">Para recuperar salve o arquivo em anexo na pasta "Gastos Simples" do seu celular.</string>
    <string name="fragment_store_text_sdcard">Celular</string>
    <string name="fragment_store_text_sucess">Gastos salvos no cartão SD</string>
    <string name="fragment_store_text_fail">Erro ao salvar no cartão SD</string>
    <string name="fragment_store_text_fail_open_SD">Erro ao abrir cartão SD</string>
    <string name="fragment_recovery_text_options">Opções</string>
    <string name="fragment_recovery_text_sdcard">Celular</string>
    <string name="fragment_recovery_text_sucess">Dados recuperados com sucesso</string>
    <string name="fragment_recovery_text_fail">Erro ao recuperar dados do cartão SD</string>
    <string name="fragment_recovery_text_choose">Erro: escolha um arquivo para restaurar os dados</string>
    <string name="fragment_graph_text_empty">Sem dados</string>
    <string name="fragment_graph_text_gain">Ganhos</string>
    <string name="fragment_graph_text_expense">Despesas</string>
    <string name="dialog_recovery_text">Escolha o arquivo</string>
    <string name="dialog_recovery_text_ok">Recuperar</string>
    <string name="dialog_recovery_text_cancel">Cancelar</string>
    <string name="dialog_category_text_cancel">Cancelar</string>
    <string name="dialog_category_text_ok_1">Criar</string>
    <string name="dialog_category_text_ok_2">Modificar</string>
    <string name="dialog_add_category_invalid_name">Nome inválido</string>
    <string name="dialog_edit_categoty_sucess">Categoria editada</string>
    <string name="dialog_edit_categoty_fail">Erro ao editar</string>
    <string name="dialog_add_categoty_sucess">Categoria adicionada</string>
    <string name="dialog_add_categoty_fail">Erro ao adicionar</string>
    <string name="activity_recurrent_text">Gastos programados</string>
    <string name="activity_recurrent_text_normal">Programado</string>
    <string name="activity_recurrent_text_daily">Diario</string>
    <string name="activity_recurrent_text_monthly">Mensal</string>
    <string name="activity_recurrent_text_edit_sucess_gain">Ganho recorrente editado com sucesso</string>
    <string name="activity_recurrent_text_remove_sucess_gain">Ganho recorrente removido com sucesso</string>
    <string name="activity_recurrent_text_edit_sucess_expense">Gasto recorrente editado com sucesso</string>
    <string name="activity_recurrent_text_remove_sucess_expense">Gasto recorrente removido com sucesso</string>
    <string name="activity_recurrent_text_edit_sucess_gain_normal">Ganho programado editado com sucesso</string>
    <string name="activity_recurrent_text_remove_sucess_gain_normal">Ganho programado removido com sucesso</string>
    <string name="activity_recurrent_text_edit_sucess_expense_normal">Gasto programado editado com sucesso</string>
    <string name="activity_recurrent_text_remove_sucess_expense_normal">Gasto programado removido com sucesso</string>
    <string name="textView_list_recurrent_name_add">Adicionar</string>

    <string-array name="nav_drawer_items">
        <item>Adicionar</item>
        <item>Lista</item>
        <item>Programado</item>
        <item>Gráficos</item>
        <item>Armazenar</item>
        <item>Recurperar</item>
        <item>Info</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_add</item>
        <item>@drawable/ic_list</item>
        <item>@drawable/ic_recurrent</item>
        <item>@drawable/ic_graph</item>
        <item>@drawable/ic_store</item>
        <item>@drawable/ic_recover</item>
        <item>@drawable/ic_about</item>
    </array>

    <string-array name="spinner_months">
        <item>Jan</item>
        <item>Fev</item>
        <item>Mar</item>
        <item>Abr</item>
        <item>Mai</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Ago</item>
        <item>Set</item>
        <item>Out</item>
        <item>Nov</item>
        <item>Dez</item>
    </string-array>
    <string-array name="spinner_years">
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>
    <string-array name="spinner_email_months">
        <item>Todos</item>
        <item>Jan</item>
        <item>Fev</item>
        <item>Mar</item>
        <item>Abr</item>
        <item>Mai</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Ago</item>
        <item>Set</item>
        <item>Out</item>
        <item>Nov</item>
        <item>Dez</item>
    </string-array>
    <string-array name="spinner_email_years">
        <item>Todos</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

</resources>
