<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:background="@color/snow"
        android:orientation="vertical">

        <br.com.tolive.simplewalletpro.views.CustomTextView
            app:font="@string/app_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:layout_gravity="center_vertical"
            android:textSize="35sp"
            android:text="@string/fragment_about_text_more_apps" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/gray"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_about_tolivehealthy">

            <br.com.tolive.simplewalletpro.views.CustomTextView
                app:font="@string/app_font"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/green_tolivehealthy"
                android:gravity="center_vertical"
                android:layout_alignParentLeft="true"
                android:textSize="30sp"
                android:layout_marginLeft="10dp"
                android:text="@string/fragment_about_tolivehealthy_text" />

            <ImageView

                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_tolivehealthy"
                android:layout_marginRight="10dp"
                android:contentDescription="@android:string/untitled"
                android:layout_gravity="end"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray"
            />

    </LinearLayout>

</ScrollView>

